--- a/client/src/app/components/navbar/menu/menu.component.html
+++ b/client/src/app/components/navbar/menu/menu.component.html
@@ -61,8 +61,8 @@
             </ng-template>
         </mat-menu>
         <button mat-button>
-            <a routerLink="/collection">
-                Collection
+            <a routerLink="/collections">
+                Collections
             </a>
         </button>
 
