--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     <div 
     *ngFor="let style of styles">
-        <a href="/collection/{{style.id}}">
+        <a href="/collections/{{style.id}}">
             <div 
             *ngIf="style.banner"
             class="bg-teal-50 hover:bg-teal-300 transition duration-200 border-l-4 border-teal-950 overflow-hidden flex flex-col group my-4 mx-auto w-[350px] md:w-[300px] z-20">
