--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-    <div class="z-50 fixed bg-teal-50 px-4 py-1 w-screen items-center flex flex-col md:flex-row">
+    <div class="z-50 fixed bg-teal-50 px-4 w-screen items-center flex flex-col md:flex-row">
         <div class="m-auto md:m-0 xl:m-auto">
             <a routerLink='/'>
                 <span class="font-sil text-2xl">
