--- a/client/src/app/components/navbar/cart/cart.component.html
+++ b/client/src/app/components/navbar/cart/cart.component.html
@@ -1,11 +1,12 @@
-<div class="flex mt-1">
+<div class="flex">
     <button 
-    mat-icon-button
+    mat-button
+    class="hover:bg-teal-300 transition duration-200"
     (click)="refresh()"
     [matMenuTriggerFor]="cartMenu">
         <mat-icon>shopping_cart</mat-icon>
     </button>
-    <mat-menu #cartMenu="matMenu">
+    <mat-menu #cartMenu="matMenu" class="w-screen md:w-[200px] overflow-y-auto">
         <ng-template matMenuContent>
             <div
             *ngIf="!cart"
@@ -15,61 +16,55 @@
                 appearance="circle">
                 </ngx-skeleton-loader>
             </div>
-            <div *ngFor="let item of cart">
-                <div mat-menu-item class="h-[120px]">
-                    <mat-card class="h-[120px]">
-                        <img  
-                        class="h-[120px] w-[35%] absolute" 
-                        src="{{item.thumbnail || item.image}}">
-                        <mat-card-header class=" flex flex-col justify-end z-10 text-right">
-                            <mat-card-subtitle>
-                                <a *ngIf="item.artist" href="/artists/{{item.artist_id}}">
-                                    <div class="pr-2 py-1 hover:bg-teal-100 transition duration-200">
-                                        {{item.artist}}
-                                    </div>
-                                </a>
-                                <span *ngIf="!item.artist">Exhibition Ticket</span>
-                            </mat-card-subtitle>
-                            <mat-card-title style="background-color: #ffffff6c; font-size: 18px; padding-right: 0.5rem;">
-                                <div 
-                                *ngIf="!item.start"
-                                class="font-medium text-md">
-                                    <a href="/artworks/{{item.id}}">
-                                        <div class="py-1 hover:bg-teal-300 transition duration-200">
-                                            {{item.title}}
-                                        </div>
-                                    </a>
-                                </div>
-                                <a *ngIf="item.start" href="/exhibitions/{{item.id}}">{{item.title}}</a>
-                            </mat-card-title>
-                            <div class="flex flex-row justify-end z-10 text-right">
-                                <mat-card-title style="font-size: 18px;">
-                                    {{item.price  || item.ticket_price}}EUR
-                                </mat-card-title>
-                                <mat-card-subtitle>
-                                    <button 
-                                    (click)="removeFromCart($event, item)"
-                                    mat-icon-button>
-                                        <mat-icon>delete</mat-icon>
-                                    </button>
-                                </mat-card-subtitle>
+            <div 
+            (click) = "$event.stopPropagation()"
+            *ngFor="let item of cart"
+            class="min-h-[125px] border-b-2 border-teal-950 flex flex-row justify-between p-2 gap-2">
+                <div class="items-center flex">
+                    <img  
+                    class="min-h-[100px] max-h-[125px]" 
+                    src="{{item.thumbnail || item.image}}">
+                </div>
+                <div class="flex flex-col text-right">
+                    <div>
+                        <a *ngIf="item.artist" href="/artists/{{item.artist_id}}">
+                            <div class="text-black px-2 py-1 hover:bg-teal-100 transition duration-200">
+                                {{item.artist}}
                             </div>
-                        </mat-card-header>
-                    </mat-card>
+                        </a>
+                        <span *ngIf="!item.artist">Exhibition Ticket</span>
+                    </div>
+                    <div>
+                        <div 
+                        *ngIf="!item.start"
+                        class="font-medium text-md">
+                            <a href="/artworks/{{item.id}}">
+                                <div class="px-2 py-1 hover:bg-teal-300 transition duration-200">
+                                    {{item.title}}
+                                </div>
+                            </a>
+                        </div>
+                        <a *ngIf="item.start" href="/exhibitions/{{item.id}}">{{item.title}}</a>
+                    </div>
+                    <div class="flex flex-row justify-end text-right gap-2">
+                        <div class="self-center text-md">
+                            {{item.price  || item.ticket_price}}EUR
+                        </div>
+                        <button
+                        class="hover:bg-red-300 transition duration-200"
+                        (click)="removeFromCart($event, item)"
+                        mat-button>
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                    </div>
                 </div>
             </div>
-            <button mat-menu-item class="checkout h-[60px]">
-                <a routerLink="/checkout">
-                    <mat-card class="h-[60px]">
-                        <mat-card-header class="z-10">
-                            <mat-card-title 
-                            style="display: flex !important;" 
-                            class="items-center">
-                                Go to Checkout
-                                <mat-icon>arrow_forward</mat-icon>
-                            </mat-card-title>
-                        </mat-card-header>
-                    </mat-card>
+            <button class="text-lg font-semibold w-full h-[60px] hover:bg-teal-300 transition duration-200">
+                <a 
+                routerLink="/checkout"
+                class="px-4 h-[60px] flex items-center gap-2">
+                    <span>Checkout</span>
+                    <mat-icon>arrow_forward</mat-icon>
                 </a>
             </button>
         </ng-template>
