--- a/client/src/app/components/navbar/menu/menu.component.html
+++ b/client/src/app/components/navbar/menu/menu.component.html
@@ -5,6 +5,7 @@
     </mat-form-field>
     <div class="py-4 flex justify-around md:py-0">
         <button 
+        class="hover:bg-teal-300 transition duration-200"
         mat-button 
         [matMenuTriggerFor]="exhibitionsMenu"
         >
@@ -28,9 +29,9 @@
                 <div *ngFor="let exh of exhibitions | slice:0:3">
                     <button mat-menu-item class="h-[120px]">
                         <a href="/exhibitions/{{exh.id}}">
-                            <mat-card class="h-[120px]">
+                            <mat-card class="h-[120px] hover:bg-teal-100">
                                 <img  
-                                class="h-[120px] w-full absolute opacity-40 hover:opacity-50 transition duration-200" 
+                                class="h-[120px] w-full absolute opacity-40 transition duration-200" 
                                 src="{{exh.image}}">
                                 <mat-card-header class="z-10">
                                     <mat-card-title class="text-black text-lg">
@@ -54,13 +55,13 @@
                 </button>
             </ng-template>
         </mat-menu>
-        <button mat-button>
+        <button mat-button class="hover:bg-teal-300 transition duration-200">
             <a routerLink="/collections">
                 Collections
             </a>
         </button>
 
-        <button mat-button>
+        <button mat-button class="hover:bg-teal-300 transition duration-200">
             <a routerLink="/artists">
                 Artists
             </a>
