--- a/client/src/app/components/checkout/checkout.component.html
+++ b/client/src/app/components/checkout/checkout.component.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     
-    <a href="/payment">
+    <a href="/checkout/address">
         <div class="gap-2 flex items-center fixed bottom-0 text-xl font-medium px-4 bg-teal-50 border-t-4 border-teal-950 rounded-none py-4 w-[350px] md:w-[500px] lg:w-[600px] z-20 hover:bg-teal-300 transition duration-200">
             <span>Proceed to Payment</span>
             <mat-icon>arrow_forward</mat-icon>
