--- a/client/src/app/components/checkout/checkout.component.html
+++ b/client/src/app/components/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col">
-    <div class="mb-[100px]">
+    <div class="mb-16 pt-2 bg-teal-50 w-screen md:w-[600px] lg:w-[750px] md:border-l-4 border-teal-950">
         <div 
         *ngFor="let item of cart" 
         class="flex group my-2 mx-auto flex-col lg:flex-row w-[350px] md:w-[500px] lg:w-[600px] z-20">
@@ -46,10 +46,10 @@
         </div>
     </div>
     
-    <a href="/checkout/address">
-        <div class="gap-2 flex items-center fixed bottom-0 text-xl font-medium px-4 bg-teal-50 border-t-4 border-teal-950 rounded-none py-4 w-[350px] md:w-[500px] lg:w-[600px] z-20 hover:bg-teal-300 transition duration-200">
-            <span>Proceed to Payment</span>
-            <mat-icon>arrow_forward</mat-icon>
-        </div>
+    <a 
+    href="/checkout/address"
+    class="gap-2 flex items-center fixed bottom-0 text-xl font-medium  bg-teal-50 border-t-4 border-teal-950 rounded-none py-4 px-4 w-screen md:w-[600px] lg:w-[750px] z-20 hover:bg-teal-300 transition duration-200">
+        <span>Proceed to Order</span>
+        <mat-icon>arrow_forward</mat-icon>
     </a>
 </div>
