--- a/client/src/app/components/exhibitions/exhibition-single/exhibition-single.component.html
+++ b/client/src/app/components/exhibitions/exhibition-single/exhibition-single.component.html
@@ -1,6 +1,6 @@
 <div
 *ngIf="exh"
-class="flex flex-col group my-4 mx-auto px-4 w-screen lg:px-0 lg:w-[1000px] z-20">
+class="flex flex-col group my-4 mx-auto w-[95%] lg:w-[1000px] z-20">
         <div 
         class="border-l-4 border-teal-950">
             <a href={{exh.url}}> 
