--- a/client/src/app/components/artists/artists.component.html
+++ b/client/src/app/components/artists/artists.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     <div 
     *ngFor="let art of artists">
-        <button class="hover:bg-teal-100 transition duration-200 bg-teal-50 border-l-4 border-b-4 border-teal-950 p-4 text-center overflow-hidden flex flex-col group my-4 mx-auto w-[350px] md:w-[600px] lg:w-[450px] z-20">
+        <button class="hover:bg-teal-100 transition duration-200 bg-teal-50 border-l-4 border-b-4 border-teal-950 p-4 text-center overflow-hidden flex flex-col group my-4 mx-auto w-[95%] md:w-[600px] lg:w-[450px] z-20">
             <a href="/artists/{{art.id}}">
                 <div class="pb-3 border-b-2 border-teal-950">
                     <div class="font-semibold p-1">
