--- a/client/src/app/components/artworks/artworks.component.html
+++ b/client/src/app/components/artworks/artworks.component.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col">
     <div 
-    *ngFor="let art of art | slice:0:20" 
-    class="flex group my-4 mx-auto flex-col lg:flex-row px-4 w-screen lg:px-0 lg:w-[1000px] z-20">
+    *ngFor="let art of art | slice:0:50" 
+    class="flex group my-4 mx-auto flex-col lg:flex-row w-[95%] lg:w-[1000px] z-20">
         <div 
-        class="border-t-0 lg:border-t-4 border-l-4 lg:border-l-0 border-teal-950 w-auto lg:w-[700px]">
+        class="border-t-0 lg:border-t-4 border-l-4 lg:border-l-0 border-teal-950 w-auto flex items-center justify-center overflow-hidden lg:w-[700px]">
             <lib-ngx-image-zoom
             [thumbImage]=art.thumbnail
             [enableScrollZoom]="true"
