--- a/client/src/app/components/checkout/address-form/address-form.component.html
+++ b/client/src/app/components/checkout/address-form/address-form.component.html
@@ -1,21 +1,137 @@
 <div class="flex flex-col">
-    <form #addressForm="ngForm" (ngSubmit)="submitForm(addressForm)">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" name="name" [(ngModel)]="addressDetails.name" required>
-          <div *ngIf="addressForm.controls['name']?.touched && addressForm.controls['name']?.invalid" class="text-danger">
-            Name is required.
-          </div>
+    <div class="mb-3 border-l-2 border-b-2 border-teal-950">
+        <div class="font-semibold p-1 ml-4 text-xl uppercase">Address Details</div>
+    </div>
+    <form 
+    class="flex flex-col gap-2"
+    #addressForm="ngForm" 
+    (ngSubmit)="submitForm(addressForm)">
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="country"
+            class="uppercase font-medium w-1/2">
+                Country
+            </label>
+            <input 
+            type="text"
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="country" 
+            name="country" 
+            [(ngModel)]="addressDetails.country" 
+            required>
+            <div 
+            *ngIf="addressForm.controls['country']?.touched && addressForm.controls['country']?.invalid" 
+            class="text-red-500 font-semibold text-sm ">
+                Required
+            </div>
+        </div>
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="name"
+            class="uppercase font-medium w-1/2">
+                Full Name
+            </label>
+            <input 
+            type="text" 
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="name" 
+            name="name" 
+            [(ngModel)]="addressDetails.name" 
+            required>
+            <div 
+            *ngIf="addressForm.controls['name']?.touched && addressForm.controls['name']?.invalid" 
+            class="text-red-500 font-semibold text-sm ">
+                Required
+            </div>
         </div>
     
-        <div class="form-group">
-          <label for="address">Address</label>
-          <input type="text" class="form-control" id="address" name="address" [(ngModel)]="addressDetails.address" required>
-          <div *ngIf="addressForm.controls['address']?.touched && addressForm.controls['address']?.invalid" class="text-danger">
-            Address is required.
-          </div>
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="phone"
+            class="uppercase font-medium w-1/2">
+                Phone Number
+            </label>
+            <input 
+            type="tel" 
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="phone" 
+            name="phone" 
+            [(ngModel)]="addressDetails.phone" 
+            required>
+            <div 
+            *ngIf="addressForm.controls['phone']?.touched && addressForm.controls['phone']?.invalid" 
+            class="text-red-500 font-semibold text-sm ">
+                Required
+            </div>
         </div>
-  
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="address"
+            class="uppercase font-medium w-1/2">
+               Address
+            </label>
+            <input 
+            type="text" 
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="address" 
+            name="address" 
+            [(ngModel)]="addressDetails.address" 
+            required>
+            <div 
+            *ngIf="addressForm.controls['address']?.touched && addressForm.controls['address']?.invalid" 
+            class="text-red-500 font-semibold text-sm ">
+                Required
+            </div>
+        </div>
+
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="code"
+            class="uppercase font-medium w-1/2">
+               Postal Code
+            </label>
+            <input 
+            type="text"
+            pattern="[0-9]{5}"
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="code" 
+            name="code" 
+            [(ngModel)]="addressDetails.code" 
+            required>
+            <div 
+            *ngIf="addressForm.controls['code']?.touched && addressForm.controls['code']?.invalid" 
+            class="text-red-500 font-semibold text-sm">
+                Required
+            </div>
+        </div>
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="town"
+            class="uppercase font-medium w-1/2">
+               Town/City
+            </label>
+            <input 
+            type="text"
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="town" 
+            name="town" 
+            [(ngModel)]="addressDetails.town" 
+            required>
+            <div 
+            *ngIf="addressForm.controls['town']?.touched && addressForm.controls['town']?.invalid" 
+            class="text-red-500 font-semibold text-sm ">
+                Required
+            </div>
+        </div>
+        <button
+        type="submit"
+        class="w-full hover:bg-teal-300 transition duration-200 border-b-4 border-teal-950 py-4 mt-4 uppercase font-semibold">
+            Proceed to Payment Method
+        </button>
     </form>
+    <div 
+    class="mt-4 p-2 text-red-500 font-semibold text-sm">
+        This is a mock form. None of the information you input will be stored or used in any way.
+    </div>
 </div>
