--- a/client/src/app/components/checkout/payment-form/payment-form.component.html
+++ b/client/src/app/components/checkout/payment-form/payment-form.component.html
@@ -1,21 +1,81 @@
 <div class="flex flex-col">
-    <form #paymentForm="ngForm" (ngSubmit)="submitForm(paymentForm)">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" name="name" [(ngModel)]="paymentDetails.name" required>
-          <div *ngIf="paymentForm.controls['name']?.touched && paymentForm.controls['name']?.invalid" class="text-danger">
-            Name is required.
-          </div>
+    <div class="mb-3 border-l-2 border-b-2 border-teal-950">
+        <div class="font-semibold p-1 ml-4 text-xl uppercase">Payment Details</div>
+    </div>
+    <form 
+    class="flex flex-col gap-2"
+    #paymentForm="ngForm" 
+    (ngSubmit)="submitForm(paymentForm)">
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="holder"
+            class="uppercase font-medium w-1/2">
+                Card Holder
+            </label>
+            <input 
+            type="text" 
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="holder" 
+            name="holder" 
+            [(ngModel)]="paymentDetails.holder" 
+            required>
+            <div 
+            *ngIf="paymentForm.controls['holder']?.touched && paymentForm.controls['holder']?.invalid" 
+            class="text-red-500 font-semibold text-sm ">
+                Required
+            </div>
         </div>
-    
-        <div class="form-group">
-          <label for="address">Address</label>
-          <input type="text" class="form-control" id="address" name="address" [(ngModel)]="paymentDetails.address" required>
-          <div *ngIf="paymentForm.controls['address']?.touched && paymentForm.controls['address']?.invalid" class="text-danger">
-            Address is required.
-          </div>
+
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="number"
+            class="uppercase font-medium w-1/2">
+               Card Number
+            </label>
+            <input 
+            type="text"
+            pattern="[0-9]+"
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="number" 
+            name="number" 
+            [(ngModel)]="paymentDetails.number" 
+            required>
+            <div 
+            *ngIf="paymentForm.controls['number']?.touched && paymentForm.controls['number']?.invalid" 
+            class="text-red-500 font-semibold text-sm">
+                Required
+            </div>
         </div>
-  
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <div class="form-group flex justify-between items-center gap-x-4">
+            <label 
+            for="cvv"
+            class="uppercase font-medium w-1/2">
+               CVV
+            </label>
+            <input 
+            type="text"
+            pattern="[0-9]{3}"
+            class="form-control px-5 py-1 border-l-2 border-b-2 border-teal-950" 
+            id="cvv" 
+            name="cvv" 
+            [(ngModel)]="paymentDetails.cvv" 
+            required>
+            <div 
+            *ngIf="paymentForm.controls['cvv']?.touched && paymentForm.controls['cvv']?.invalid" 
+            class="text-red-500 font-semibold text-sm">
+                Required
+            </div>
+        </div>
+
+        <button
+        type="submit"
+        class="w-full hover:bg-teal-300 transition duration-200 border-b-4 border-teal-950 py-4 mt-4 uppercase font-semibold">
+            Place Order
+        </button>
     </form>
+    <div 
+    class="mt-4 p-2 text-red-500 font-semibold text-sm">
+        This is a mock form. None of the information you input will be stored or used in any way.
+    </div>
 </div>
