--- a/client/src/app/components/checkout/address-form/address-form.component.html
+++ b/client/src/app/components/checkout/address-form/address-form.component.html
@@ -1,12 +1,12 @@
-<div class="flex flex-col">
-    <div class="mb-3 border-l-2 border-b-2 border-teal-950">
+<div class="flex flex-col w-[95%] items-center m-auto">
+    <div class="mb-3 border-l-2 border-b-2 mt-4 border-teal-950">
         <div class="font-semibold p-1 ml-4 text-xl uppercase">Address Details</div>
     </div>
     <form 
-    class="flex flex-col gap-2"
+    class="flex flex-col gap-2 w-full px-1"
     #addressForm="ngForm" 
     (ngSubmit)="submitForm(addressForm)">
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center md:gap-x-4">
             <label 
             for="country"
             class="uppercase font-medium w-1/2">
@@ -25,7 +25,7 @@
                 Required
             </div>
         </div>
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="name"
             class="uppercase font-medium w-1/2">
@@ -45,7 +45,7 @@
             </div>
         </div>
     
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="phone"
             class="uppercase font-medium w-1/2">
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="address"
             class="uppercase font-medium w-1/2">
@@ -85,7 +85,7 @@
             </div>
         </div>
 
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="code"
             class="uppercase font-medium w-1/2">
@@ -105,7 +105,7 @@
                 Required
             </div>
         </div>
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="town"
             class="uppercase font-medium w-1/2">
@@ -131,7 +131,8 @@
         </button>
     </form>
     <div 
-    class="mt-4 p-2 text-red-500 font-semibold text-sm">
-        This is a mock form. None of the information you input will be stored or used in any way.
+    class="flex flex-col text-center mt-4 p-2 text-red-500 font-semibold text-sm">
+        <span>This is a mock form.</span>
+        <span>None of the information you input will be stored or used in any way.</span>
     </div>
 </div>
