--- a/client/src/app/components/checkout/payment-form/payment-form.component.html
+++ b/client/src/app/components/checkout/payment-form/payment-form.component.html
@@ -1,12 +1,12 @@
-<div class="flex flex-col">
-    <div class="mb-3 border-l-2 border-b-2 border-teal-950">
+<div class="flex flex-col w-[95%] items-center m-auto">
+    <div class="mb-3 border-l-2 border-b-2 mt-4 border-teal-950">
         <div class="font-semibold p-1 ml-4 text-xl uppercase">Payment Details</div>
     </div>
     <form 
     class="flex flex-col gap-2"
     #paymentForm="ngForm" 
     (ngSubmit)="submitForm(paymentForm)">
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="holder"
             class="uppercase font-medium w-1/2">
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="number"
             class="uppercase font-medium w-1/2">
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="form-group flex justify-between items-center gap-x-4">
+        <div class="form-group flex flex-col md:flex-row justify-between items-center gap-x-4">
             <label 
             for="cvv"
             class="uppercase font-medium w-1/2">
@@ -75,7 +75,8 @@
         </button>
     </form>
     <div 
-    class="mt-4 p-2 text-red-500 font-semibold text-sm">
-        This is a mock form. None of the information you input will be stored or used in any way.
+    class="flex flex-col text-center mt-4 p-2 text-red-500 font-semibold text-sm">
+        <span>This is a mock form.</span>
+        <span>None of the information you input will be stored or used in any way.</span>
     </div>
 </div>
