--- a/client/src/app/components/navbar/cart/cart.component.html
+++ b/client/src/app/components/navbar/cart/cart.component.html
@@ -6,7 +6,7 @@
     [matMenuTriggerFor]="cartMenu">
         <mat-icon>shopping_cart</mat-icon>
     </button>
-    <mat-menu #cartMenu="matMenu" class="w-screen md:w-[200px] overflow-y-auto">
+    <mat-menu #cartMenu="matMenu" class="w-screen md:w-[200px]">
         <ng-template matMenuContent>
             <div
             *ngIf="!cart"
@@ -16,58 +16,60 @@
                 appearance="circle">
                 </ngx-skeleton-loader>
             </div>
-            <div 
-            (click) = "$event.stopPropagation()"
-            *ngFor="let item of cart"
-            class="min-h-[125px] border-b-2 border-teal-950 flex flex-row justify-between p-2 gap-2">
-                <div class="items-center flex">
-                    <img  
-                    class="min-h-[100px] max-h-[125px]" 
-                    src="{{item.thumbnail || item.image}}">
-                </div>
-                <div class="flex flex-col text-right">
-                    <div class="border-b-2 border-teal-950">
-                        <a *ngIf="item.artist" href="/artists/{{item.artist_id}}">
-                            <div class="text-black px-2 py-1 hover:bg-teal-300 transition duration-200">
-                                {{item.artist}}
+            <div class="max-h-[70vh] overflow-y-auto mb-16">
+                <div 
+                (click) = "$event.stopPropagation()"
+                *ngFor="let item of cart"
+                class="min-h-[125px] border-b-2 border-teal-950 flex flex-row justify-between p-2 gap-2">
+                    <div class="items-center flex">
+                        <img  
+                        class="min-h-[100px] max-h-[125px]" 
+                        src="{{item.thumbnail || item.image}}">
+                    </div>
+                    <div class="flex flex-col text-right">
+                        <div class="border-b border-teal-950">
+                            <a *ngIf="item.artist" href="/artists/{{item.artist_id}}">
+                                <div class="text-black px-2 py-1 hover:bg-teal-300 transition duration-200">
+                                    {{item.artist}}
+                                </div>
+                            </a>
+                            <span *ngIf="!item.artist">Exhibition Ticket</span>
+                        </div>
+                        <div>
+                            <div 
+                            *ngIf="!item.start"
+                            class="font-medium text-md">
+                                <a href="/artworks/{{item.id}}">
+                                    <div class="px-2 py-1 hover:bg-teal-300 transition duration-200">
+                                        {{item.title}}
+                                    </div>
+                                </a>
                             </div>
-                        </a>
-                        <span *ngIf="!item.artist">Exhibition Ticket</span>
-                    </div>
-                    <div>
-                        <div 
-                        *ngIf="!item.start"
-                        class="font-medium text-md">
-                            <a href="/artworks/{{item.id}}">
-                                <div class="px-2 py-1 hover:bg-teal-300 transition duration-200">
-                                    {{item.title}}
-                                </div>
-                            </a>
+                            <div 
+                            *ngIf="item.start"
+                            class="font-medium text-md">
+                                <a href="/exhibitions/{{item.id}}">
+                                    <div class="px-2 py-1 hover:bg-teal-300 transition duration-200">
+                                        {{item.title}}
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                        <div 
-                        *ngIf="item.start"
-                        class="font-medium text-md">
-                            <a href="/exhibitions/{{item.id}}">
-                                <div class="px-2 py-1 hover:bg-teal-300 transition duration-200">
-                                    {{item.title}}
-                                </div>
-                            </a>
+                        <div class="flex flex-row justify-end text-right gap-2">
+                            <div class="self-center text-md">
+                                {{item.price  || item.ticket_price}}EUR
+                            </div>
+                            <button
+                            class="hover:bg-red-300 transition duration-200"
+                            (click)="removeFromCart($event, item)"
+                            mat-button>
+                                <mat-icon>delete</mat-icon>
+                            </button>
                         </div>
-                    </div>
-                    <div class="flex flex-row justify-end text-right gap-2">
-                        <div class="self-center text-md">
-                            {{item.price  || item.ticket_price}}EUR
-                        </div>
-                        <button
-                        class="hover:bg-red-300 transition duration-200"
-                        (click)="removeFromCart($event, item)"
-                        mat-button>
-                            <mat-icon>delete</mat-icon>
-                        </button>
                     </div>
                 </div>
             </div>
-            <button class="text-lg font-medium w-full h-[60px] hover:bg-teal-300 transition duration-200">
+            <button class="fixed bottom-0 text-lg font-medium w-full h-[60px] bg-teal-50 hover:bg-teal-300 transition duration-200">
                 <a 
                 routerLink="/checkout"
                 class="px-4 h-[60px] flex items-center gap-2">
