--- a/client/src/app/components/navbar/menu/menu.component.html
+++ b/client/src/app/components/navbar/menu/menu.component.html
@@ -1,9 +1,14 @@
 <div class="flex flex-col md:flex-row">
-    <mat-form-field  class="w-[200px] mx-auto md:mx-2">
-        <mat-icon matPrefix>search</mat-icon>
-        <input matInput placeholder="Search...">
-    </mat-form-field>
-    <div class="py-4 flex justify-around md:py-0">
+    <!-- <div class="flex items-center">
+        <input type="text" placeholder="Search..." #filter>
+        <button 
+        class="flex items-center" 
+        type="button"
+        (click)="filterResults(filter.value)">
+            <mat-icon>search</mat-icon>
+        </button>
+    </div> -->
+    <div class="py-2 flex justify-around md:py-0">
         <button 
         class="hover:bg-teal-300 transition duration-200"
         mat-button 
