--- a/client/src/app/components/artworks/artworks.component.css
+++ b/client/src/app/components/artworks/artworks.component.css
@@ -2,3 +2,7 @@
     font-size: 14px;
     border-bottom: 4px solid rgb(4 47 46) !important;
 }
+::ng-deep .ngxImageZoomContainer{
+    width: unset !important;
+    height: unset !important;
+}
