--- a/client/src/app/components/artworks/artworks.component.html
+++ b/client/src/app/components/artworks/artworks.component.html
@@ -2,15 +2,7 @@
     <div 
     *ngFor="let art of art | slice:0:50" 
     class="flex group my-4 mx-auto flex-col lg:flex-row w-[95%] lg:w-[1000px] z-20">
-        <div 
-        class="border-t-0 lg:border-t-4 border-l-4 lg:border-l-0 border-teal-950 w-auto flex items-center justify-center overflow-hidden lg:w-[700px]">
-            <lib-ngx-image-zoom
-            [thumbImage]=art.thumbnail
-            [enableScrollZoom]="true"
-            [enableLens]="true"
-            [maxZoomRatio]="4"
-            ></lib-ngx-image-zoom>
-        </div>
+        <app-artwork-image [imageUrl]="environment.API_URL + '/public/artworks/' + art.image + '.jpg'"></app-artwork-image>
         <div 
         class="border-l-4 border-b-4 border-teal-950 p-4 text-center bg-teal-50 w-auto lg:px-0 lg:w-[300px] h-fit">
             <div class="pb-3 mx-2 border-b-2 border-teal-950">
@@ -22,9 +14,9 @@
                     </a>
                 </div>
                 <div class="font-semibold text-lg">
-                    <a *ngIf="art.artist != null" href="/artists/{{art.artist_id}}">
+                    <a *ngIf="art.artist != null" href="/artists/{{art.artist.id}}">
                         <div class="py-1 hover:bg-teal-300 transition duration-200">
-                            {{art.artist}}
+                            {{art.artist.title}}
                         </div>
                     </a>
                     <div *ngIf="art.artist == null">Artist Unknown</div>
