style(FE): :lipstick: small styling changes

--- a/client/src/app/components/artworks/artworks.component.css
+++ b/client/src/app/components/artworks/artworks.component.css
@@ -6,3 +6,6 @@
     width: unset !important;
     height: unset !important;
 }
+::ng-deep .ngxImageZoomLensEnabled {
+    border: 4px solid rgb(4 47 46) !important;
+}
