--- a/client/src/app/components/exhibitions/exhibition-single/exhibition-single.component.html
+++ b/client/src/app/components/exhibitions/exhibition-single/exhibition-single.component.html
@@ -3,17 +3,18 @@
 class="flex flex-col group my-4 mx-auto w-[95%] lg:w-[1000px] z-20">
         <div 
         class="border-l-4 border-teal-950">
-            <a href={{exh.url}}> 
-                <img src='{{environment.API_URL}}/public/exhibitions/{{exh.id}}.jpg' />
-            </a>
+            <img src='{{environment.API_URL}}/public/exhibitions/{{exh.id}}.jpg' />
         </div>
         <div 
         class="border-l-4 border-b-4 border-teal-950 p-4 text-center bg-teal-50 h-fit">
-            <div class="pb-3 border-b-2 border-teal-950">
+            <div class="flex w-full items-center justify-center pb-3 border-b-2 border-teal-950">
                 <div class="font-semibold p-1 text-xl uppercase">{{exh.title}}</div>
+                <a href={{exh.url}} target="_blank" class="items-center flex"> 
+                    <mat-icon class="hover:text-teal-300 transition duration-200">language</mat-icon>
+                </a>
             </div>
             <div class="p-2 py-3 text-xs text-left border-b-2 border-teal-950">
-                <div class="flex justify-between border-teal-950/20">
+                <div class="flex justify-evenly border-teal-950/20">
                     <span class="font-bold text-lg">{{exh.start | date: 'longDate'}}</span> until  <span class="font-bold text-lg">{{exh.end | date: 'longDate'}}</span>
                 </div>
                 <div 
